Wink Project page complete

--- a/work/_posts/2015-01-01-wink.md
+++ b/work/_posts/2015-01-01-wink.md
@@ -12,10 +12,60 @@ hero-repeat:    no-repeat
 permalink:      /wink/
 ---
 
-Wink started out as the thought... Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, mauris non lobortis tristique, metus urna ultricies metus, et varius eros lorem quis augue. Aenean convallis vitae turpis tincidunt cursus.
+#### **Broadcast Live with a Friend**
 
-Nam a elit sollicitudin, luctus augue quis, egestas diam. In placerat tempor scelerisque. Proin eros sapien, euismod in maximus et, ullamcorper at enim. Curabitur quis metus scelerisque, ultricies ipsum ut, vulputate urna.
+Wink is a social video streaming app I helped design while at [Tackk](/tackk). The purpose of the app is to be able to broadcast realtime video with a friend, think FaceTime but with an audience. The users watching your live stream can comment or *wink* at you if they liked something you or your friend says or does.
 
-Donec egestas arcu volutpat lectus mollis finibus. Sed id imperdiet nunc. Phasellus nisl odio, volutpat in augue vitae, sollicitudin lobortis dui. Etiam dignissim dui sed orci molestie, vel blandit tellus fringilla.
+While we did have a well working prototype, the app was never released to the pubic. I believe the work I did on this project is still worth showing.
 
-Nulla placerat ultrices velit vitae convallis. Donec hendrerit velit quis erat bibendum viverra. Nam id turpis ac augue scelerisque volutpat. Nunc nec quam nulla. Quisque posuere mi sollicitudin, malesuada purus non, volutpat neque.
+My responsibilities included creating the logo, brand, wireframes, prototypes, website design, and marketing materials.
+
+
+<div class="project-gallery mt7" itemscope itemtype="http://schema.org/ImageGallery">
+
+<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/wink/wink-website.png" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/wink/wink-website-sm.png" class="width-full" itemprop="thumbnail" alt="Wink Website" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">Website Design</figcaption>                              
+</figure>{% comment %}
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/wink/wink-face.png" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/wink/wink-face-sm.png" class="width-full" itemprop="thumbnail" alt="Wink Icon" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">Wink Icon</figcaption>                              
+</figure>{% comment %}
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/wink/wink-ipad.jpg" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/wink/wink-ipad-sm.jpg" class="width-full" itemprop="thumbnail" alt="Wink in the Browser" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">Browser Experience</figcaption>                              
+</figure>{% comment %}
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/wink/wink-marketing.jpg" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/wink/wink-marketing-sm.jpg" class="width-full" itemprop="thumbnail" alt="Wink Marketing Creative" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">Marketing Creative</figcaption>                              
+</figure>{% comment %}
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/wink/wink-ui.jpg" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/wink/wink-ui-sm.jpg" class="width-full" itemprop="thumbnail" alt="Wink UI" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">User Interface</figcaption>                              
+</figure>{% comment %}
+
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/wink/wink-ux.jpg" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/wink/wink-ux-sm.jpg" class="width-full" itemprop="thumbnail" alt="Wink UX" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">User Experience</figcaption>                              
+</figure>                     
+
+</div>
+
+{% include modules/plugin-photoswipe.html %}
