--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -12,14 +12,16 @@ hero-repeat:    no-repeat
 permalink:      /squad/
 ---
 
-Squad is an [iOS](https://itunes.apple.com/app/apple-store/id1043626975) and [Android](https://play.google.com/store/apps/details?id=com.tackk.squad) app I helped design while at [Tackk](/tackk). The core function of the app is to give you live on-demand status updates from your closest groups of friends, one-hour at a time.
+#### **Shake Things Up**
+
+Squad is an [iOS](https://itunes.apple.com/app/apple-store/id1043626975) and [Android](https://play.google.com/store/apps/details?id=com.tackk.squad) app I helped design while at [Tackk](/tackk). The purpose of the app is to give you live on-demand status updates from your closest groups of friends by shaking your phone.
 
 Squad has become very popular with teens. Within 6 months of launching, Squad has been downloaded over 400k times and has had over 2 million status updates posted.
 
-My role in the project was creating the logo, brand, wireframes, prototypes, [website](https://getsquad.us), and marketing materials.
+My responsibilities included creating the logo, brand, wireframes, prototypes, [website](https://getsquad.us), and marketing materials.
 
 
-<div class="project-gallery mt6" itemscope itemtype="http://schema.org/ImageGallery">
+<div class="project-gallery mt7" itemscope itemtype="http://schema.org/ImageGallery">
 
 <figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
   <a href="/img/work/squad/squad-logo.jpg" data-size="2000x1600" itemprop="contentUrl">
