--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -12,7 +12,9 @@ hero-repeat:    repeat-x
 permalink:      /bytesize-icons/
 ---
 
-Bytesize is a micro line iconset I created to help learn the [SVG spec](https://www.w3.org/TR/SVG/), particularly [SVG Paths](https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Paths) and how they are drawn within code.
+#### **A Passion Project**
+
+Bytesize is a passion project I started to help learn the [SVG spec](https://www.w3.org/TR/SVG/), particularly [SVG Paths](https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Paths) and how they are drawn within code.
 
 Each icon is hand-coded along a 32x32 grid, and uses SVG `stroke` allowing for maximum style flexibility; meaning you can adjust the weight, color, size, and if you want the edges to be round or square.
 
