--- a/work/_posts/2015-01-01-wink.md
+++ b/work/_posts/2015-01-01-wink.md
@@ -14,7 +14,7 @@ permalink:      /wink/
 
 #### **Broadcast Live with a Friend**
 
-Wink is a social video streaming app I helped design while at [Tackk](/tackk). The purpose of the app is to be able to broadcast realtime video with a friend, think FaceTime but with an audience. The users watching your live stream can comment or *wink* at you if they liked something you or your friend says or does.
+In 2015, I lead design efforts as Creative Director on a product called Wink, a social video streaming app. The purpose of the app is to be able to broadcast realtime video with a friend, think FaceTime but with an audience. The users watching your live stream can comment or *wink* at you if they liked something you or your friend says or does.
 
 While we did have a well working prototype, the app was never released to the pubic. I believe the work I did on this project is still worth showing.
 
