--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -14,7 +14,7 @@ permalink:      /squad/
 
 #### **Shake Things Up**
 
-Squad is an [iOS](https://itunes.apple.com/app/apple-store/id1043626975) and [Android](https://play.google.com/store/apps/details?id=com.tackk.squad) app I helped design while at [Tackk](/tackk). The purpose of the app is to give you live on-demand status updates from your closest groups of friends by shaking your phone.
+Squad is an [iOS](https://itunes.apple.com/app/apple-store/id1043626975) and [Android](https://play.google.com/store/apps/details?id=com.tackk.squad) app in which I lead design efforts as Creative Director at [Tackk](/tackk). The purpose of the app is to give you live on-demand status updates from your closest groups of friends by shaking your phone.
 
 Squad has become very popular with teens. Within 6 months of launching, Squad has been downloaded over 400k times and has had over 2 million status updates posted.
 
