Added Tackk copy and updated other project copy

--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -12,13 +12,20 @@ hero-repeat:    no-repeat
 permalink:      /squad/
 ---
 
-#### **Shake Things Up**
+#### **Shake things up**
 
-Squad is an [iOS](https://itunes.apple.com/app/apple-store/id1043626975) and [Android](https://play.google.com/store/apps/details?id=com.tackk.squad) app in which I lead design efforts as Creative Director at [Tackk](/tackk). The purpose of the app is to give you live on-demand status updates from your closest groups of friends by shaking your phone.
+Squad is an [iOS] and [Android] app in which I lead design efforts as Creative Director at [Tackk]. The purpose of the app is to give you live on-demand status updates from your closest groups of friends by shaking your phone.
 
-Squad has become very popular with teens. Within 6 months of launching, Squad has been downloaded over 400k times and has had over 2 million status updates posted.
+Squad has become a top 1,500 iOS app in US *Overall*, and top 125 app in the *Photos and Videos* category in one month. Within 6 months of launching, Squad has been downloaded over 400k times and has had over 2 million status updates posted.
 
-My responsibilities included creating the logo, brand, wireframes, prototypes, [website](https://getsquad.us), and marketing materials.
+My responsibilities included creating the logo, brand, wireframes, prototypes, [website], [UI sounds], and marketing materials.
+
+
+[iOS]: https://itunes.apple.com/app/apple-store/id1043626975
+[Android]: https://play.google.com/store/apps/details?id=com.tackk.squad
+[Tackk]: /tackk
+[website]: https://getsquad.us
+[UI sounds]: https://soundcloud.com/danklammer/sets/squad-sounds/s-MWtGM
 
 
 <div class="project-gallery mt7" itemscope itemtype="http://schema.org/ImageGallery">
