--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -12,18 +12,24 @@ hero-repeat:    repeat-x
 permalink:      /bytesize-icons/
 ---
 
-#### **A Passion Project**
+#### **A passion project**
 
-Bytesize is a passion project I started to help learn the [SVG spec](https://www.w3.org/TR/SVG/), particularly [SVG Paths](https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Paths) and how they are drawn within code.
+Bytesize is a passion project I started to help learn the [SVG spec], particularly [SVG Paths] and how they are drawn within code.
 
 Each icon is hand-coded along a 32x32 grid, and uses SVG `stroke` allowing for maximum style flexibility; meaning you can adjust the weight, color, size, and if you want the edges to be round or square.
 
 While designing and coding these icons, I tried to place as few points as possible to keep the shapes simple but also to reduce on file size. All 75+ icons measure in at 9KB minified (2KB in SVGZ, or Gzipped).
 
-Check out a demo of Bytesize and what I learned while creating them in my post, [SVG Icons FTW](/articles/svg-icons-ftw). Also free free to use any of these icons on your next project. Everything is available on the [Bytesize GitHub page](https://github.com/danklammer/bytesize-icons)!
+Check out a demo of Bytesize and what I learned while creating them in my post, [SVG Icons FTW]. Also free free to use any of these icons on your next project. Everything is available on the [Bytesize GitHub page].
 
 <div class="py4 align-center">
     <a href="https://github.com/danklammer/bytesize-icons" class="btn dim underline-none text-shadow-light box-shadow-light px3 py2 br6 pressable">
         Bytesize on GitHub
     </a>
 </div>
+
+
+[SVG spec]: https://www.w3.org/TR/SVG/
+[SVG Paths]: https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Paths
+[SVG Icons FTW]: /articles/svg-icons-ftw
+[Bytesize GitHub page]: https://github.com/danklammer/bytesize-icons
