--- a/work/_posts/2013-01-01-tackk.md
+++ b/work/_posts/2013-01-01-tackk.md
@@ -13,10 +13,24 @@ hero-maxwidth:  1097px
 permalink:      /tackk/
 ---
 
-Tackk started out as the thought... Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, mauris non lobortis tristique, metus urna ultricies metus, et varius eros lorem quis augue. Aenean convallis vitae turpis tincidunt cursus.
+#### **Simply create beautiful pages**
 
-Nam a elit sollicitudin, luctus augue quis, egestas diam. In placerat tempor scelerisque. Proin eros sapien, euismod in maximus et, ullamcorper at enim. Curabitur quis metus scelerisque, ultricies ipsum ut, vulputate urna.
+I co-founded Tackk with Eric Bockmuller in 2013 with the mission to empower everyone with the ability to instantly create, publish and share beautiful content on the web.
 
-Donec egestas arcu volutpat lectus mollis finibus. Sed id imperdiet nunc. Phasellus nisl odio, volutpat in augue vitae, sollicitudin lobortis dui. Etiam dignissim dui sed orci molestie, vel blandit tellus fringilla.
+Since officially launching in 2013, there have been over 50 million visits to users' created Tackk pages. Tackk has been featured on [PCWorld], [TechCrunch], [AppStorm], and many other publications.
 
-Nulla placerat ultrices velit vitae convallis. Donec hendrerit velit quis erat bibendum viverra. Nam id turpis ac augue scelerisque volutpat. Nunc nec quam nulla. Quisque posuere mi sollicitudin, malesuada purus non, volutpat neque.
+Tackk has become especially popular with teachers and educators, allowing students to have fun publishing their school projects with the rest of the classroom... and world!
+
+
+#### **Other products**
+
+While at Tackk Inc, I also played in a major part in creating other apps including the [Tackk mobile app], [Squad], and [Wink].
+
+
+[PCWorld]: http://www.pcworld.com/article/2062252/tackk-review-out-of-beta-still-an-excellent-way-to-create-simple-websites.html "Tackk review: Out of beta, still an excellent way to create simple websites"
+[TechCrunch]: https://techcrunch.com/2013/09/30/tack-seed-funding/ "Tackk Raises $1.2M For Its Content Creation Tools"
+[AppStorm]: http://web.appstorm.net/reviews/media-reviews/create-beautiful-posters-and-fliers-instantly-with-tackk/ "Create Beautiful Posters and Fliers Instantly with Tackk"
+[Tackk mobile app]: /tackk-app
+[Squad]: /squad
+[Wink]: /wink
+
