--- a/work/_posts/2015-01-01-wink.md
+++ b/work/_posts/2015-01-01-wink.md
@@ -12,13 +12,16 @@ hero-repeat:    no-repeat
 permalink:      /wink/
 ---
 
-#### **Broadcast Live with a Friend**
+#### **Broadcast live with a friend**
 
-In 2015, I lead design efforts as Creative Director on a product called Wink, a social video streaming app. The purpose of the app is to be able to broadcast realtime video with a friend, think FaceTime but with an audience. The users watching your live stream can comment or *wink* at you if they liked something you or your friend says or does.
+While at [Tackk], I lead design efforts as Creative Director on a product called Wink, a social video streaming app. The purpose of the app is to be able to broadcast realtime video with a friend, think FaceTime but with an audience. The users watching your live stream can comment or *wink* at you if they liked something you or your friend says or does.
 
 While we did have a well working prototype, the app was never released to the pubic. I believe the work I did on this project is still worth showing.
 
 My responsibilities included creating the logo, brand, wireframes, prototypes, website design, and marketing materials.
+
+
+[Tackk]: /tackk
 
 
 <div class="project-gallery mt7" itemscope itemtype="http://schema.org/ImageGallery">
