--- a/work/_posts/2013-01-01-tackk.md
+++ b/work/_posts/2013-01-01-tackk.md
@@ -15,7 +15,7 @@ permalink:      /tackk/
 
 #### **Simply create beautiful pages**
 
-I co-founded Tackk with Eric Bockmuller in 2013 with the mission to empower everyone with the ability to instantly create, publish and share beautiful content on the web.
+I co-founded Tackk with Eric Bockmuller in 2013 with the idea to empower everyone with the ability to instantly create, publish, and share beautiful content on the web.
 
 Since officially launching in 2013, there have been over 50 million visits to users' created Tackk pages. Tackk has been featured on [PCWorld], [TechCrunch], [AppStorm], and many other publications.
 
