--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -16,7 +16,7 @@ permalink:      /squad/
 
 Squad is an [iOS] and [Android] app in which I lead design efforts as Creative Director at [Tackk]. The purpose of the app is to give you live on-demand status updates from your closest groups of friends by shaking your phone.
 
-Within 6 months of launching, Squad has been downloaded over 400k times and has had over 2 million status updates posted. Squad has become a top 1,500 iOS app in US *Overall*, and top 125 app in the *Photos and Videos* category in one month. 
+Within 6 months of launching, Squad has been downloaded over 400k times and has had over 2 million status updates posted. Squad has become a top 1,500 iOS app in US *Overall*, and top 125 app in the *Photos &amp; Videos* category in one month. 
 
 My responsibilities included creating the logo, brand, wireframes, prototypes, [website], [UI sounds], and marketing materials.
 
