Now all JS is loaded at the bottom of doc, Use ModuleJS Args in front matter

--- a/work/_posts/2015-01-01-wink.md
+++ b/work/_posts/2015-01-01-wink.md
@@ -10,6 +10,8 @@ hero-image:     /img/work/wink/wink-hero.jpg
 hero-position:  center bottom
 hero-repeat:    no-repeat
 permalink:      /wink/
+modulejs:
+    - modules/plugin-photoswipe.js
 ---
 
 #### **Broadcast live with a friend**
