--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -10,6 +10,8 @@ hero-image:     /img/work/squad/squad-hero.jpg
 hero-position:  center bottom
 hero-repeat:    no-repeat
 permalink:      /squad/
+modulejs:
+    - modules/plugin-photoswipe.js
 ---
 
 #### **Shake things up**
