--- a/articles/_posts/2014-06-16-halo-md.md
+++ b/articles/_posts/2014-06-16-halo-md.md
@@ -7,6 +7,8 @@ author:         Dan Klammer
 color:          "23, 18, 47"
 hero-image:     /img/articles/2014-06-16-halo-md/halo-md-hero.jpg
 permalink:      /articles/halo-md/
+modulejs:
+    - modules/plugin-zoomable.js
 ---
 
 HaloMD (Mini Demo) is a free and legal download that extends the life of Halo (for Mac users). If you have an Xbox 360 controller, it's just like you remembered when you were hopped up on Mountain Dew LiveWire playing LAN direct connect CTF on Blood Gulch with your High School buddies. And it's still just as freakin' fun too!
@@ -35,6 +37,3 @@ I also recommend setting your Xbox 360 Controller joystick settings to have a sl
   [HaloMD.net]: http://www.halomd.net/
   [TattieBogle Xbox360Controller]: http://tattiebogle.net/index.php/ProjectRoot/Xbox360Controller/OsxDriver
   [Microsoft Support page]: http://support.microsoft.com/kb/909385
-
-
-{% include modules/plugin-zoomable.html %}
