Better video handling in the gallery

--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -68,7 +68,7 @@ My responsibilities included creating the logo, brand, wireframes, prototypes, [
 </figure>{% comment %}
 
 {% endcomment %}<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-  <a href="/img/work/squad/squad-video.mp4" data-size="2000x1600" data-type="video" data-video='<div class="inline-block-middle"><video width="320" src="/img/work/squad/squad-video.mp4" poster="/img/work/squad/squad-video-poster.jpg" controls style="height: 84vh; max-width: 100%; width: auto;"></video></div>' itemprop="contentUrl">
+  <a href="/img/work/squad/squad-video.mp4" data-size="2000x1600" data-type="video" data-video='<div class="inline-block-middle"><video width="320" src="/img/work/squad/squad-video.mp4" poster="/img/work/squad/squad-video-poster.jpg" controls style="height: 84vh; max-width: 100%; width: auto;" id="gallery-video"></video></div>' itemprop="contentUrl">
       <img src="/img/work/squad/squad-video-sm.jpg" class="width-full" itemprop="thumbnail" alt="App Store Video" />
   </a>
   <figcaption class="project-item-caption align-middle p2" itemprop="caption description">App Store Video</figcaption>
