Change hero-position to only use background-position-x. Supposed to fix iOS bug.

--- a/work/_posts/2011-01-01-playaway.md
+++ b/work/_posts/2011-01-01-playaway.md
@@ -7,7 +7,7 @@ role:           Sr. Web Designer
 color:          "242, 98, 34"
 cover-image:    /img/work/playaway/playaway-cover.jpg
 hero-image:     /img/work/playaway/playaway-hero.jpg
-hero-position:  left bottom
+hero-position:  left
 hero-repeat:    no-repeat
 hero-maxwidth:  800px
 permalink:      /playaway/
