--- a/work/_posts/2012-01-01-theringg.md
+++ b/work/_posts/2012-01-01-theringg.md
@@ -7,7 +7,7 @@ role:           Co-Founder
 color:          "72, 194, 212"
 cover-image:    /img/work/theringg/theringg-cover.jpg
 hero-image:     /img/work/theringg/theringg-hero.jpg
-hero-position:  left bottom
+hero-position:  left
 hero-repeat:    no-repeat
 hero-maxwidth:  800px
 permalink:      /the-ringg/
