--- a/work/_posts/2014-01-01-tackkapp.md
+++ b/work/_posts/2014-01-01-tackkapp.md
@@ -7,7 +7,7 @@ role:           Co-Founder
 color:          "195, 54, 111"
 cover-image:    /img/work/tackkapp/tackkapp-cover.jpg
 hero-image:     /img/work/tackkapp/tackkapp-cover.jpg
-hero-position:  center bottom
+hero-position:  center
 hero-repeat:    no-repeat
 permalink:      /tackk-app/
 ---
