--- a/work/_posts/2015-01-01-wink.md
+++ b/work/_posts/2015-01-01-wink.md
@@ -7,7 +7,7 @@ role:           Creative Director
 color:          "28, 201, 220"
 cover-image:    /img/work/wink/wink-cover.jpg
 hero-image:     /img/work/wink/wink-hero.jpg
-hero-position:  center bottom
+hero-position:  center
 hero-repeat:    no-repeat
 permalink:      /wink/
 modulejs:
