--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -7,7 +7,7 @@ role:           Creative Director
 color:          "104, 82, 199"
 cover-image:    /img/work/squad/squad-cover.jpg
 hero-image:     /img/work/squad/squad-hero.jpg
-hero-position:  center bottom
+hero-position:  center
 hero-repeat:    no-repeat
 permalink:      /squad/
 modulejs:
