--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -7,7 +7,7 @@ role:           Creator
 color:          "77, 87, 114"
 cover-image:    /img/work/bytesize/bytesize-cover.jpg
 hero-image:     /img/work/bytesize/bytesize-hero.jpg
-hero-position:  center bottom
+hero-position:  center
 hero-repeat:    repeat-x
 permalink:      /bytesize-icons/
 ---
