Moving stuff around until ready to post.

--- a/work/_posts/2011-01-01-playaway.md
+++ b/work/_posts/2011-01-01-playaway.md
@@ -13,10 +13,11 @@ hero-maxwidth:  800px
 permalink:      /playaway/
 ---
 
-Wink started out as the thought... Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, mauris non lobortis tristique, metus urna ultricies metus, et varius eros lorem quis augue. Aenean convallis vitae turpis tincidunt cursus.
+#### **Preloaded and portable products**
 
-Nam a elit sollicitudin, luctus augue quis, egestas diam. In placerat tempor scelerisque. Proin eros sapien, euismod in maximus et, ullamcorper at enim. Curabitur quis metus scelerisque, ultricies ipsum ut, vulputate urna.
+Playaway is a pre-loaded and portable audiobook player. Playaway is very popular in libraries where patrons can check out individual titles.
 
-Donec egestas arcu volutpat lectus mollis finibus. Sed id imperdiet nunc. Phasellus nisl odio, volutpat in augue vitae, sollicitudin lobortis dui. Etiam dignissim dui sed orci molestie, vel blandit tellus fringilla.
+As Senior Web Designer, I ran and owned all the web including the creation and management of [each channels' website], the company's intranet and extranet, designed and developed over 100+ promotional HTML emails, automation and creation of all 10,000+ *heroshot* title images, and the creation of many promo microsites.
 
-Nulla placerat ultrices velit vitae convallis. Donec hendrerit velit quis erat bibendum viverra. Nam id turpis ac augue scelerisque volutpat. Nunc nec quam nulla. Quisque posuere mi sollicitudin, malesuada purus non, volutpat neque.
+
+[each channels' website]: http://my.playaway.com/
