--- a/work/_posts/2013-01-01-tackk.md
+++ b/work/_posts/2013-01-01-tackk.md
@@ -15,22 +15,24 @@ permalink:      /tackk/
 
 #### **Simply create beautiful pages**
 
-I co-founded Tackk with Eric Bockmuller in 2013 with the idea to empower everyone with the ability to instantly create, publish, and share beautiful content on the web.
+I co-founded [Tackk] with Eric Bockmuller in 2013 with the mission to empower everyone with the ability to instantly create, publish, and share beautiful content on the web.
 
-Since officially launching in 2013, there have been over 50 million visits to users' created Tackk pages. Tackk has been featured on [PCWorld], [TechCrunch], [AppStorm], and many other publications.
+Since officially launching in 2013, there have been over 50 million visits to users' created Tackk pages and over 2.5 million comments posted. Tackk has also been featured on [PCWorld], [TechCrunch], [AppStorm], and many other publications.
 
-Tackk has become especially popular with teachers and educators, allowing students to have fun publishing their school projects with the rest of the classroom... and world!
+Tackk has become especially popular with teachers and educators, allowing students to have fun sharing their school projects with the rest of the classroom... and world!
+
+As Co-founder, I operated as the Creative Director owning the brand and product design.
 
 
 #### **Other products**
 
-While at Tackk Inc, I also played in a major part in creating other apps including the [Tackk mobile app], [Squad], and [Wink].
+While at Tackk Inc, I also played in a major role in the design and creation of other apps including [Squad] and [Wink].
 
 
+[Tackk]: https://tackk.com/
 [PCWorld]: http://www.pcworld.com/article/2062252/tackk-review-out-of-beta-still-an-excellent-way-to-create-simple-websites.html "Tackk review: Out of beta, still an excellent way to create simple websites"
 [TechCrunch]: https://techcrunch.com/2013/09/30/tack-seed-funding/ "Tackk Raises $1.2M For Its Content Creation Tools"
 [AppStorm]: http://web.appstorm.net/reviews/media-reviews/create-beautiful-posters-and-fliers-instantly-with-tackk/ "Create Beautiful Posters and Fliers Instantly with Tackk"
-[Tackk mobile app]: /tackk-app
 [Squad]: /squad
 [Wink]: /wink
 
