Move to drafts. Small updates.

--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -20,7 +20,7 @@ Each icon is hand-coded along a 32x32 grid, and uses SVG `stroke` allowing for m
 
 While designing and coding these icons, I tried to place as few points as possible to keep the shapes simple but also to reduce on file size. All 75+ icons measure in at 9KB minified (2KB in SVGZ, or Gzipped).
 
-Check out a demo of Bytesize and what I learned while creating them in my post, [SVG Icons FTW]. Also free free to use any of these icons on your next project. Everything is available on the [Bytesize GitHub page].
+Feel free to use any of these icons on your next project. Everything is available on the [Bytesize GitHub page].
 
 <div class="py4 align-center">
     <a href="https://github.com/danklammer/bytesize-icons" class="btn dim underline-none text-shadow-light box-shadow-light px3 py2 br6 pressable">
@@ -31,5 +31,5 @@ Check out a demo of Bytesize and what I learned while creating them in my post, 
 
 [SVG spec]: https://www.w3.org/TR/SVG/
 [SVG Paths]: https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Paths
-[SVG Icons FTW]: /articles/svg-icons-ftw
+[Inline SVG FTW]: /articles/inline-svg-ftw/
 [Bytesize GitHub page]: https://github.com/danklammer/bytesize-icons
