Small changes. And remove the curtain! (Still needs lots of work, though)

--- a/work/_posts/2011-01-01-playaway.md
+++ b/work/_posts/2011-01-01-playaway.md
@@ -15,7 +15,7 @@ permalink:      /playaway/
 
 #### **Preloaded and portable products**
 
-Playaway is a pre-loaded and portable audiobook player. Playaway is very popular in libraries where patrons can check out individual titles.
+Playaway is a pre-loaded and portable audiobook player which is very popular in libraries where patrons can check out individual titles.
 
 As Senior Web Designer, I ran and owned all the web including the creation and management of [each channels' website], the company's intranet and extranet, designed and developed over 100+ promotional HTML emails, automation and creation of all 10,000+ *heroshot* title images, and the creation of many promo microsites.
 
