--- a/work/_posts/2013-01-01-tackk.md
+++ b/work/_posts/2013-01-01-tackk.md
@@ -19,7 +19,7 @@ I co-founded [Tackk] with Eric Bockmuller in 2013 with the mission to empower ev
 
 Since officially launching in 2013, there have been over 50 million visits to users' created Tackk pages and over 2.5 million comments posted. Tackk has also been featured on [PCWorld], [TechCrunch], [AppStorm], and many other publications.
 
-Tackk has become especially popular with teachers and educators, allowing students to have fun sharing their school projects with the rest of the classroom... and world!
+Tackk has become especially popular with teachers and educators, allowing students to have fun creating and sharing their school projects with the rest of the classroom... and world!
 
 As Co-founder, I operated as the Creative Director owning the brand and product design.
 
