Copy updates to Tackk page

--- a/work/_posts/2013-01-01-tackk.md
+++ b/work/_posts/2013-01-01-tackk.md
@@ -15,18 +15,18 @@ permalink:      /tackk/
 
 #### **Simply create beautiful pages**
 
-I co-founded [Tackk] with Eric Bockmuller in 2013 with the mission to empower everyone with the ability to instantly create, publish, and share beautiful content on the web.
+I co-founded [Tackk] with Eric Bockmuller in 2013, with the mission to empower everyone with the ability to instantly create, publish, and share beautiful content on the web.
 
-Since officially launching in 2013, there have been over 50 million visits to users' created Tackk pages and over 2.5 million comments posted. Tackk has also been featured on [PCWorld], [TechCrunch], [AppStorm], and many other publications.
+Since officially launching, there have been over 50 million visits to user created Tackk pages and over 2.5 million comments posted. Tackk has been featured on [PCWorld], [TechCrunch], [AppStorm], and many other publications.
 
 Tackk has become especially popular with teachers and educators, allowing students to have fun creating and sharing their school projects with the rest of the classroom... and world!
 
-As Co-founder, I operated as the Creative Director owning the brand and product design.
+As Creative Director, I owned product design and branding.
 
 
 #### **Other products**
 
-While at Tackk Inc, I also played in a major role in the design and creation of other apps including [Squad] and [Wink].
+While at Tackk, I also played a major role in the design of two other apps, [Squad] and [Wink].
 
 
 [Tackk]: https://tackk.com/
