Add Torque Mag link

--- a/work/_posts/2013-01-01-tackk.md
+++ b/work/_posts/2013-01-01-tackk.md
@@ -17,7 +17,7 @@ permalink:      /tackk/
 
 I co-founded [Tackk] with Eric Bockmuller in 2013, with the mission to empower everyone with the ability to instantly create, publish, and share beautiful content on the web.
 
-Since officially launching, there have been over 50 million visits to user created Tackk pages and over 2.5 million comments posted. Tackk has been featured on [PCWorld], [TechCrunch], [AppStorm], and many other publications.
+Since officially launching, there have been over 50 million visits to user created Tackk pages and over 2.5 million comments posted. Tackk has been featured on [PCWorld], [TechCrunch], [AppStorm], [Torque Magazine], and many other publications.
 
 Tackk has become especially popular with teachers and educators, allowing students to have fun creating and sharing their school projects with the rest of the classroom... and world!
 
@@ -33,6 +33,7 @@ While at Tackk, I also played a major role in the design of two other apps, [Squ
 [PCWorld]: http://www.pcworld.com/article/2062252/tackk-review-out-of-beta-still-an-excellent-way-to-create-simple-websites.html "Tackk review: Out of beta, still an excellent way to create simple websites"
 [TechCrunch]: https://techcrunch.com/2013/09/30/tack-seed-funding/ "Tackk Raises $1.2M For Its Content Creation Tools"
 [AppStorm]: http://web.appstorm.net/reviews/media-reviews/create-beautiful-posters-and-fliers-instantly-with-tackk/ "Create Beautiful Posters and Fliers Instantly with Tackk"
+[Torque Magazine]: http://torquemag.io/2013/02/tackk/ "Impressed: My First Look at Tackk"
 [Squad]: /squad
 [Wink]: /wink
 
