--- a/articles/_posts/2014-06-16-halo-md.md
+++ b/articles/_posts/2014-06-16-halo-md.md
@@ -5,6 +5,7 @@ subtitle:       "Play Halo 1 just like the old days on your original Xbox"
 date:           2014-06-16
 author:         Dan Klammer
 color:          "23, 18, 47"
+color-alpha:    "0.8"
 hero-image:     /img/articles/2014-06-16-halo-md/halo-md-hero.jpg
 permalink:      /articles/halo-md/
 modulejs:
