Added Thumbs for Bytesize project

--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -10,6 +10,8 @@ hero-image:     /img/work/bytesize/bytesize-hero.jpg
 hero-position:  center
 hero-repeat:    repeat-x
 permalink:      /bytesize-icons/
+modulejs:
+    - modules/plugin-photoswipe.js
 ---
 
 #### **A passion project**
@@ -33,3 +35,33 @@ Check out a demo of Bytesize and what I learned while creating them in my post, 
 [SVG Paths]: https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Paths
 [SVG Stroke FTW]: /articles/svg-stroke-ftw/
 [Bytesize GitHub page]: https://github.com/danklammer/bytesize-icons
+
+
+<div class="project-gallery mt7" itemscope itemtype="http://schema.org/ImageGallery">
+
+<figure class="project-item lg-width-33 sm-width-100 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/bytesize/bytesize-green.png" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/bytesize/bytesize-green-sm.png" class="width-full" itemprop="thumbnail" alt="Thin &amp; Square" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">Thin &amp; Square</figcaption>                              
+</figure>{% comment %}
+
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-100 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/bytesize/bytesize-gray.png" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/bytesize/bytesize-gray-sm.png" class="width-full" itemprop="thumbnail" alt="Full Iconset" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">Full Iconset</figcaption>                              
+</figure>{% comment %}
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-100 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/bytesize/bytesize-blue.png" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/bytesize/bytesize-blue-sm.png" class="width-full" itemprop="thumbnail" alt="Thick &amp; Round" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">Thick &amp; Round</figcaption>                              
+</figure>
+
+
+</div>
+
+{% include modules/plugin-photoswipe.html %}
