Add custom descriptions for project pages

--- a/work/_posts/2011-01-01-playaway.md
+++ b/work/_posts/2011-01-01-playaway.md
@@ -2,6 +2,7 @@
 layout:         project
 title:          "Playaway"
 subtitle:       "All-in-one audiobook player"
+description:    "Playaway is a pre-loaded and portable audiobook player which is very popular in libraries where patrons can check out individual titles."
 year:           2011
 role:           Sr. Web Designer
 color:          "242, 98, 34"
