--- a/work/_posts/2013-01-01-tackk.md
+++ b/work/_posts/2013-01-01-tackk.md
@@ -2,6 +2,7 @@
 layout:         project
 title:          "Tackk"
 subtitle:       "Single-page site creator"
+description:    "I co-founded Tackk in 2013, with the mission to empower everyone with the ability to instantly create, publish, and share beautiful content on the web."
 year:           2013
 role:           Co-Founder
 color:          "45, 159, 227"
