--- a/work/_posts/2015-01-01-wink.md
+++ b/work/_posts/2015-01-01-wink.md
@@ -2,6 +2,7 @@
 layout:         project
 title:          "Wink"
 subtitle:       "Video streaming app"
+description:    "I lead design efforts as Creative Director on a product called Wink, a video streaming app to broadcast live with a friend."
 year:           2015
 role:           Creative Director
 color:          "28, 201, 220"
