--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -2,6 +2,7 @@
 layout:         project
 title:          "Squad"
 subtitle:       "Social photo status app"
+description:    "Squad is an iOS and Android app in which I led design efforts as Creative Director at Tackk."
 year:           2016
 role:           Creative Director
 color:          "104, 82, 199"
