--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -2,6 +2,7 @@
 layout:         project
 title:          "Bytesize"
 subtitle:       "Tiny style-controlled SVG iconset"
+description:    "Bytesize is a passion project I started to help learn the SVG spec, particularly SVG Paths and how they are drawn within code."
 year:           2016
 role:           Creator
 color:          "77, 87, 114"
