Added Sitemap properties

--- a/articles/_posts/2014-06-16-halo-md.md
+++ b/articles/_posts/2014-06-16-halo-md.md
@@ -10,6 +10,10 @@ hero-image:     /img/articles/2014-06-16-halo-md/halo-md-hero.jpg
 permalink:      /articles/halo-md/
 modulejs:
     - modules/plugin-zoomable.js
+sitemap:
+  lastmod: 2016-08-08
+  priority: 0.7
+  changefreq: 'monthly'
 ---
 
 HaloMD (Mini Demo) is a free and legal download that extends the life of Halo (for Mac users). If you have an Xbox 360 controller, it's just like you remembered when you were hopped up on Mountain Dew LiveWire playing LAN direct connect CTF on Blood Gulch with your High School buddies. And it's still just as freakin' fun too!
