--- a/work/_drafts/2014-01-01-tackkapp.md
+++ b/work/_drafts/2014-01-01-tackkapp.md
@@ -10,6 +10,10 @@ hero-image:     /img/work/tackkapp/tackkapp-cover.jpg
 hero-position:  center
 hero-repeat:    no-repeat
 permalink:      /tackk-app/
+sitemap:
+  lastmod: 
+  priority: 0.7
+  changefreq: 'monthly'
 ---
 
 Tackk app started out as the thought... Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, mauris non lobortis tristique, metus urna ultricies metus, et varius eros lorem quis augue. Aenean convallis vitae turpis tincidunt cursus.
