--- a/work/_posts/2011-01-01-playaway.md
+++ b/work/_posts/2011-01-01-playaway.md
@@ -12,6 +12,10 @@ hero-position:  left
 hero-repeat:    no-repeat
 hero-maxwidth:  800px
 permalink:      /playaway/
+sitemap:
+  lastmod: 2016-08-08
+  priority: 0.7
+  changefreq: 'monthly'
 ---
 
 #### **Preloaded and portable products**
