--- a/work/_posts/2013-01-01-tackk.md
+++ b/work/_posts/2013-01-01-tackk.md
@@ -12,6 +12,10 @@ hero-position:  80%
 hero-repeat:    no-repeat
 hero-maxwidth:  1097px
 permalink:      /tackk/
+sitemap:
+  lastmod: 2016-08-08
+  priority: 0.7
+  changefreq: 'monthly'
 ---
 
 #### **Simply create beautiful pages**
