--- a/work/_posts/2015-01-01-wink.md
+++ b/work/_posts/2015-01-01-wink.md
@@ -13,6 +13,10 @@ hero-repeat:    no-repeat
 permalink:      /wink/
 modulejs:
     - modules/plugin-photoswipe.js
+sitemap:
+  lastmod: 2016-08-08
+  priority: 0.7
+  changefreq: 'monthly'
 ---
 
 #### **Broadcast live with a friend**
