--- a/work/_drafts/2012-01-01-theringg.md
+++ b/work/_drafts/2012-01-01-theringg.md
@@ -11,6 +11,10 @@ hero-position:  left
 hero-repeat:    no-repeat
 hero-maxwidth:  800px
 permalink:      /the-ringg/
+sitemap:
+  lastmod: 
+  priority: 0.7
+  changefreq: 'monthly'
 ---
 
 The Ringg was a 
