--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -13,6 +13,10 @@ hero-repeat:    no-repeat
 permalink:      /squad/
 modulejs:
     - modules/plugin-photoswipe.js
+sitemap:
+  lastmod: 2016-08-08
+  priority: 0.7
+  changefreq: 'monthly'
 ---
 
 #### **Shake things up**
