--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -13,6 +13,10 @@ hero-repeat:    repeat-x
 permalink:      /bytesize-icons/
 modulejs:
     - modules/plugin-photoswipe.js
+sitemap:
+  lastmod: 2016-08-08
+  priority: 0.7
+  changefreq: 'monthly'
 ---
 
 #### **A passion project**
