--- a/work/_posts/2013-01-01-tackk.md
+++ b/work/_posts/2013-01-01-tackk.md
@@ -12,6 +12,8 @@ hero-position:  80%
 hero-repeat:    no-repeat
 hero-maxwidth:  1097px
 permalink:      /tackk/
+modulejs:
+    - modules/plugin-photoswipe.js
 sitemap:
   lastmod: 2016-08-08
   priority: 0.7
@@ -42,3 +44,53 @@ While at Tackk, I also played a major role in the design of two other apps, [Squ
 [Squad]: /squad
 [Wink]: /wink
 
+
+<div class="project-gallery mt7" itemscope itemtype="http://schema.org/ImageGallery">
+
+<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/tackk/tackk-logo.png" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/tackk/tackk-logo-sm.png" class="width-full" itemprop="thumbnail" alt="Tackk Name + Logo" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">Name + Logo</figcaption>                              
+</figure>{% comment %}
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/tackk/tackk-editor.jpg" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/tackk/tackk-editor-sm.jpg" class="width-full" itemprop="thumbnail" alt="Tackk Editor" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">Tackk Editor</figcaption>
+
+</figure>{% comment %}
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/tackk/tackk-ux-ui.jpg" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/tackk/tackk-ux-ui-sm.jpg" class="width-full" itemprop="thumbnail" alt="Tackk UX + UI" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">UX + UI</figcaption>                              
+</figure>{% comment %}
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/tackk/tackk-homepage.jpg" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/tackk/tackk-homepage-sm.jpg" class="width-full" itemprop="thumbnail" alt="Tackk Homepage" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">Homepage</figcaption>                              
+</figure>{% comment %}
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/tackk/tackk-profile.jpg" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/tackk/tackk-profile-sm.jpg" class="width-full" itemprop="thumbnail" alt="Profile Pages" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">Profile Pages</figcaption>                              
+</figure>{% comment %}
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/tackk/tackk-tackkoglyphics.png" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/tackk/tackk-tackkoglyphics-sm.png" class="width-full" itemprop="thumbnail" alt="Tackk Iconography" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">Tackk Iconography</figcaption>                              
+</figure>                             
+
+
+</div>
+
+{% include modules/plugin-photoswipe.html %}
