--- a/work/_posts/2015-01-01-wink.md
+++ b/work/_posts/2015-01-01-wink.md
@@ -21,7 +21,7 @@ sitemap:
 
 #### **Broadcast live with a friend**
 
-While at [Tackk], I lead design efforts as Creative Director on a product called Wink, a social video streaming app. The purpose of the app is to be able to broadcast realtime video with a friend, think FaceTime but with an audience. The users watching your live stream can comment or *wink* at you if they liked something you or your friend says or does.
+While at [Tackk], I led design efforts as Creative Director on a product called Wink, a social video streaming app. The purpose of the app is to be able to broadcast realtime video with a friend, think FaceTime but with an audience. The users watching your live stream can comment or *wink* at you if they liked something you or your friend says or does.
 
 While we did have a well working prototype, the app was never released to the pubic. I believe the work I did on this project is still worth showing.
 
