--- a/work/_posts/2013-01-01-tackk.md
+++ b/work/_posts/2013-01-01-tackk.md
@@ -22,11 +22,11 @@ sitemap:
 
 #### **Simply create beautiful pages**
 
-I co-founded [Tackk] with Eric Bockmuller in 2013, with the mission to empower everyone with the ability to instantly create, publish, and share beautiful content on the web.
+I co-founded Tackk in 2013, with the mission to empower everyone with the ability to instantly create, publish, and share beautiful content on the web.
 
 Since officially launching, there have been over 50 million visits to user created Tackk pages and over 2.5 million comments posted. Tackk has been featured on [PCWorld], [TechCrunch], [AppStorm], [Torque Magazine], and many other publications.
 
-Tackk has become especially popular with teachers and educators, allowing students to have fun creating and sharing their school projects with the rest of the classroom... and world!
+Tackk has become especially popular with teachers and educators, allowing students to have fun creating and sharing their school projects with the rest of the classroom&hellip; and world!
 
 As Creative Director, I owned product design and branding.
 
@@ -36,7 +36,6 @@ As Creative Director, I owned product design and branding.
 While at Tackk, I also played a major role in the design of two other apps, [Squad] and [Wink].
 
 
-[Tackk]: https://tackk.com/
 [PCWorld]: http://www.pcworld.com/article/2062252/tackk-review-out-of-beta-still-an-excellent-way-to-create-simple-websites.html "Tackk review: Out of beta, still an excellent way to create simple websites"
 [TechCrunch]: https://techcrunch.com/2013/09/30/tack-seed-funding/ "Tackk Raises $1.2M For Its Content Creation Tools"
 [AppStorm]: http://web.appstorm.net/reviews/media-reviews/create-beautiful-posters-and-fliers-instantly-with-tackk/ "Create Beautiful Posters and Fliers Instantly with Tackk"
