Remove Website link

--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -25,13 +25,12 @@ Squad is an [iOS] and [Android] app in which I led design efforts as Creative Di
 
 Within 6 months of launching, Squad has been downloaded over 400k times and has had over 2 million status updates posted. Squad has become a top 1,500 iOS app in US *Overall*, and top 125 app in the *Photos &amp; Videos* category in one month. 
 
-My responsibilities included creating the logo, brand, wireframes, prototypes, [website], [UI sounds], and marketing materials.
+My responsibilities included creating the logo, brand, wireframes, prototypes, website, [UI sounds], and marketing materials.
 
 
 [iOS]: https://itunes.apple.com/app/apple-store/id1043626975
 [Android]: https://play.google.com/store/apps/details?id=com.tackk.squad
 [Tackk]: /tackk
-[website]: https://getsquad.us
 [UI sounds]: https://soundcloud.com/danklammer/sets/squad-sounds/s-MWtGM
 
 
